[gd_scene load_steps=17 format=3 uid="uid://bu1ci1jhpw4u5"]

[ext_resource type="Script" uid="uid://esvgo8trh17h" path="res://scenes/ui/game_over/game_over_screen.gd" id="1_fdghx"]
[ext_resource type="AudioStream" uid="uid://c42c7pgfvi4s" path="res://assets/audio/sound_effects/menu/sfx_menu_appear.wav" id="2_u3uey"]
[ext_resource type="PackedScene" uid="uid://b817wce4nifhn" path="res://scenes/ui/star.tscn" id="4_lqr8p"]
[ext_resource type="Texture2D" uid="uid://b2lnhfmjx3bhk" path="res://assets/textures/ui/Fin_Background.png" id="4_tmhko"]
[ext_resource type="Texture2D" uid="uid://tgbax53obl3i" path="res://assets/fossils/footprints/fossil_footprint_avaceratops-1.png" id="5_3dait"]
[ext_resource type="PackedScene" uid="uid://bhrgkkh3oe3px" path="res://scenes/ui/empty_star.tscn" id="5_r1tj2"]
[ext_resource type="Texture2D" uid="uid://qfnx17i4xto0" path="res://assets/textures/ui/Arrow_Repeat.png" id="6_lqr8p"]
[ext_resource type="LabelSettings" uid="uid://bf23cgxfjefwf" path="res://resources/default_label.tres" id="6_r1tj2"]
[ext_resource type="FontFile" uid="uid://coexytxldfvlm" path="res://assets/fonts/barlow/Barlow-Bold.ttf" id="7_0ccdq"]
[ext_resource type="Texture2D" uid="uid://dcmhtd7rnubom" path="res://assets/textures/ui/Arrow_Next.png" id="7_r1tj2"]
[ext_resource type="Texture2D" uid="uid://psjgplfl1pda" path="res://assets/textures/ui/Arrow_Repeat_Hover.png" id="9_akil3"]
[ext_resource type="Script" uid="uid://dh0fh6o726g1h" path="res://src/button_shim.gd" id="10_c5lb4"]
[ext_resource type="Texture2D" uid="uid://cnqaqndbhr3yu" path="res://assets/textures/ui/Arrow_Next_Hover.png" id="11_3dait"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w3hxg"]
texture = ExtResource("4_tmhko")

[sub_resource type="LabelSettings" id="LabelSettings_akil3"]
font = ExtResource("7_0ccdq")
font_size = 50
font_color = Color(0.559053, 0.411395, 0.301581, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c5lb4"]
font = ExtResource("7_0ccdq")
font_size = 40
font_color = Color(0.414042, 0.297175, 0.209878, 1)

[node name="GameOverScreen" type="CanvasLayer" node_paths=PackedStringArray("time_label", "damage_label", "time_need_label", "star_container", "fossil")]
script = ExtResource("1_fdghx")
game_over_sound = ExtResource("2_u3uey")
star_scene = ExtResource("4_lqr8p")
empty_star = ExtResource("5_r1tj2")
time_label = NodePath("MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/MarginContainer/Time")
damage_label = NodePath("MarginContainer/PanelContainer/VBoxContainer/VBOx/MarginContainer2/DamageInfo")
time_need_label = NodePath("MarginContainer/PanelContainer/VBoxContainer/VBOx/Info")
star_container = NodePath("MarginContainer/PanelContainer/VBoxContainer/MarginContainer2/StarContainer")
fossil = NodePath("MarginContainer/PanelContainer/VBoxContainer/Fossil")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_w3hxg")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Fossil" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(340, 340)
layout_mode = 2
texture = ExtResource("5_3dait")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="StarContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer2/StarContainer" instance=ExtResource("4_lqr8p")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Time" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
text = "Example Time"
label_settings = ExtResource("6_r1tj2")

[node name="VBOx" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/VBOx"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="DamageInfo" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/VBOx/MarginContainer2"]
custom_minimum_size = Vector2(1300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "You discovered a Plateron, in mind condition"
label_settings = SubResource("LabelSettings_akil3")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Info" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/VBOx"]
custom_minimum_size = Vector2(1000, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Testsdfds"
label_settings = SubResource("LabelSettings_c5lb4")
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/VBOx"]
layout_mode = 2
theme_override_constants/margin_top = 80

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="ReplayButton" type="TextureButton" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("6_lqr8p")
texture_hover = ExtResource("9_akil3")
script = ExtResource("10_c5lb4")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1110, 0)
layout_mode = 2

[node name="NextLevelButton" type="TextureButton" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("7_r1tj2")
texture_hover = ExtResource("11_3dait")
script = ExtResource("10_c5lb4")

[connection signal="button_up" from="MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer2/ReplayButton" to="." method="_on_replay_button_button_up"]
[connection signal="button_up" from="MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer2/NextLevelButton" to="." method="_on_next_level_button_button_up"]
